--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="theme-color" content="#121212">
   <title>Paris Travel Guide</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icons/icon-192x192.png" type="image/png">
+  <link rel="icon" href="icons/icon-192x192.jpg",
+" type="image/jpg">
   <style>
     :root {
       /* ダークモードデフォルト */
