--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Paris Travel Guide</title>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="icons/icon-192x192.jpg",
-" type="image/jpg">
+type="image/jpg">
   <style>
     :root {
       /* ダークモードデフォルト */
