--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="theme-color" content="#121212">
   <title>Paris Travel Guide</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icons/icon-192x192.png" type="image/png">
-  <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+  <link rel="icon" href="icons/icon-192x192.jpg" type="image/jpg">
+  <link rel="apple-touch-icon" href="icons/icon-192x192.jpg">
   <style>
     /* スタイルは変更なし（前回と同じ） */
     :root {
