--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       background-color: var(--bg-secondary);
       padding: 1.5rem;
       box-shadow: var(--shadow);
-      position: absolute;
+      position: fixed;
       top: 0;
       z-index: 100;
     }
