--- a/index.html
+++ b/index.html
@@ -344,6 +344,17 @@
     <a href="mailto:mementomorikatsu@gmail.com" class="contact-link">mementomorikatsu@gmail.com</a>
   </footer>
 
+<script 
+  src="https://www.paypal.com/sdk/js?client-id=BAA0suVAzcTFoJgRUMmayNk7_ZdiVzOf-FAcRGFkBOfbIrrZHRPCVk08izlnAVYXfOv1t80zabAbgIOBCs&components=hosted-buttons&disable-funding=venmo&currency=USD">
+</script>
+  
+<div id="paypal-container-MFVPZZDFUTKEN"></div>
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "MFVPZZDFUTKEN",
+  }).render("#paypal-container-MFVPZZDFUTKEN")
+</script>
+  
   <script>
     // 修正した観光地データ
     const attractions = {
