--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
           id: 1,
           name: "Eiffel Tower",
           description: "The iconic iron lattice tower on the Champ de Mars, named after engineer Gustave Eiffel. Standing at 330 meters tall, it's one of the most recognizable structures in the world and offers breathtaking views of Paris.",
-          image: "eiffel.jpg",
+          image: "https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Tour_Eiffel_Wikimedia_Commons_%28cropped%29.jpg/250px-Tour_Eiffel_Wikimedia_Commons_%28cropped%29.jpg",
           link: "https://www.toureiffel.paris/en"
         },
         {
           id: 2,
           name: "Louvre Museum",
           description: "The world's largest art museum and a historic monument. Home to the Mona Lisa, Venus de Milo, and over 35,000 works of art spanning from antiquity to the 21st century.",
-          image: "louvre.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9Q4EzkuhPEb-e1Lr83hoXNaOkDnvG-5OZf8gwTRAhyTPgiSv-c1RvBK4&s=10",
           link: "https://www.louvre.fr/en"
         },
         {
@@ -449,14 +449,14 @@
           id: 1,
           name: "Tour Eiffel",
           description: "L'emblématique tour en treillis de fer sur le Champ de Mars, nommée d'après l'ingénieur Gustave Eiffel. Culminant à 330 mètres, c'est l'une des structures les plus reconnaissables au monde et offre une vue imprenable sur Paris.",
-          image: "eiffel.jpg",
+          image: "https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Tour_Eiffel_Wikimedia_Commons_%28cropped%29.jpg/250px-Tour_Eiffel_Wikimedia_Commons_%28cropped%29.jpg",
           link: "https://www.toureiffel.paris/fr"
         },
         {
           id: 2,
           name: "Musée du Louvre",
           description: "Le plus grand musée d'art du monde et un monument historique. Abritant la Joconde, la Vénus de Milo et plus de 35 000 œuvres d'art de l'Antiquité au XXIe siècle.",
-          image: "louvre.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9Q4EzkuhPEb-e1Lr83hoXNaOkDnvG-5OZf8gwTRAhyTPgiSv-c1RvBK4&s=10",
           link: "https://www.louvre.fr/fr"
         },
         {
