--- a/index.html
+++ b/index.html
@@ -377,14 +377,14 @@
           id: 3,
           name: "Notre-Dame Cathedral",
           description: "Medieval Catholic cathedral on the Île de la Cité. Known for its French Gothic architecture, historic significance, and as the setting for Victor Hugo's novel.",
-          image: "notredame.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSl24y2x9bKnN9OgNpf9gczpVwD8bS3It0TwA&s",
           link: "https://www.notredamedeparis.fr/en/"
         },
         {
           id: 4,
           name: "Montmartre & Sacré-Cœur",
           description: "Historic artistic neighborhood crowned by the stunning white-domed Basilica of the Sacred Heart. Offers panoramic views of Paris and retains its village-like charm.",
-          image: "montmartre.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQB9eJ0EnhMbZCCMBglAD0ecB88SF696TPX36XwsgyoQQishDeL0GzumO4&s=10",
           link: "https://www.sacre-coeur-montmartre.com/english/"
         },
         {
@@ -463,14 +463,14 @@
           id: 3,
           name: "Cathédrale Notre-Dame",
           description: "Cathédrale catholique médiévale située sur l'Île de la Cité. Connue pour son architecture gothique française, son importance historique et comme cadre du roman de Victor Hugo.",
-          image: "notredame.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSl24y2x9bKnN9OgNpf9gczpVwD8bS3It0TwA&s",
           link: "https://www.notredamedeparis.fr/"
         },
         {
           id: 4,
           name: "Montmartre & Sacré-Cœur",
           description: "Quartier artistique historique dominé par la magnifique basilique du Sacré-Cœur à dôme blanc. Offre une vue panoramique sur Paris et conserve son charme villageois.",
-          image: "montmartre.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQB9eJ0EnhMbZCCMBglAD0ecB88SF696TPX36XwsgyoQQishDeL0GzumO4&s=10",
           link: "https://www.sacre-coeur-montmartre.com/"
         },
         {
