--- a/index.html
+++ b/index.html
@@ -391,56 +391,56 @@
           id: 5,
           name: "Musée d'Orsay",
           description: "Housed in a former railway station, this museum contains French art from 1848 to 1914, including the largest collection of impressionist and post-impressionist masterpieces.",
-          image: "orsay.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXJ3lATxURK0ezyyp2Og-L7cg0XMwcg4L-lo0fEUWNbXk6Dw4wYhdUz2Eb&s=10",
           link: "https://www.musee-orsay.fr/en"
         },
         {
           id: 6,
           name: "Champs-Élysées",
           description: "Famous avenue stretching 1.9 km from Place de la Concorde to Arc de Triomphe. Lined with cafes, luxury shops, theaters, and the annual finish line of the Tour de France.",
-          image: "champs.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSezjIIpCjGA0-l5O3XYyxxnWSL-0EJ7JLUFJ-3tta7p01rQlN5RlFzOao&s=10",
           link: "https://www.champselysees-paris.com/"
         },
         {
           id: 7,
           name: "Palace of Versailles",
           description: "Former royal residence built by Louis XIV, featuring the Hall of Mirrors, extensive gardens, and the Grand Trianon. A UNESCO World Heritage site located just outside Paris.",
-          image: "versailles.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNqsPjM_CPBsKDioJrAADJi-sWkeCwmlmgLVyjoXxcaMcoh0nOAV5zzlo7&s=10",
           link: "https://en.chateauversailles.fr/"
         },
         {
           id: 8,
           name: "Sainte-Chapelle",
           description: "Gothic chapel on the Île de la Cité, renowned for its stunning stained glass windows that depict 1,113 biblical scenes in vibrant colors.",
-          image: "sainte_chapelle.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm0KL3R4q8qZYb3MeCKFSUjxqhrH2618jwOnbJVy2BnJpdiJKqw2uW0tSp&s=10",
           link: "https://www.sainte-chapelle.fr/en/"
         },
         {
           id: 9,
           name: "Luxembourg Gardens",
           description: "60-acre park created in 1612 featuring tree-lined promenades, tennis courts, flowerbeds, model sailboats on the Grand Bassin, and the Luxembourg Palace.",
-          image: "luxembourg.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeq3e_QgPdeFZd3w-KqdEo0YJ8wpVERnDSUkYSe04xuM1tFNQWZeYvoow&s=10",
           link: "https://en.parisinfo.com/paris-museum-monument/71371/Jardin-du-Luxembourg"
         },
         {
           id: 10,
           name: "Moulin Rouge",
           description: "World-famous cabaret known as the birthplace of the modern form of can-can dance. Established in 1889 with its iconic red windmill on its roof.",
-          image: "moulinrouge.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5jgeoKzUiNfrooK1MO4uC_Gd8aL1zGhzWv2SSsuCpIpdUCZZQUxt1QoU&s=10",
           link: "https://www.moulinrouge.fr/"
         },
         {
           id: 11,
           name: "Père Lachaise Cemetery",
           description: "Largest cemetery in Paris and one of the world's most visited, with graves of Jim Morrison, Oscar Wilde, Édith Piaf, and many other notable figures.",
-          image: "perelachaise.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR39d_wrAtU5p2NahrOcTEZLezBj7s3EukepR19eu6cFQWbZwpP61I_sXU&s=10",
           link: "https://www.pere-lachaise.com/"
         },
         {
           id: 12,
           name: "Seine River Cruise",
           description: "Experience Paris from the water with a cruise along the Seine River, passing by major landmarks beautifully illuminated at night.",
-          image: "seine.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREOB0kVDBUmPIPTqlTvfDaBMJWLe7SjC32iOUX1MjefNcBNE0ii3XinY59&s=10",
           link: "https://www.bateauxparisiens.com/en.html"
         }
       ],
@@ -477,56 +477,56 @@
           id: 5,
           name: "Musée d'Orsay",
           description: "Installé dans une ancienne gare ferroviaire, ce musée contient l'art français de 1848 à 1914, dont la plus grande collection de chefs-d'œuvre impressionnistes et post-impressionnistes.",
-          image: "orsay.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRXJ3lATxURK0ezyyp2Og-L7cg0XMwcg4L-lo0fEUWNbXk6Dw4wYhdUz2Eb&s=10",
           link: "https://www.musee-orsay.fr/fr"
         },
         {
           id: 6,
           name: "Champs-Élysées",
           description: "Avenue célèbre s'étendant sur 1,9 km de la Place de la Concorde à l'Arc de Triomphe. Bordée de cafés, boutiques de luxe, théâtres et ligne d'arrivée annuelle du Tour de France.",
-          image: "champs.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSezjIIpCjGA0-l5O3XYyxxnWSL-0EJ7JLUFJ-3tta7p01rQlN5RlFzOao&s=10",
           link: "https://www.champselysees-paris.com/"
         },
         {
           id: 7,
           name: "Château de Versailles",
           description: "Ancienne résidence royale construite par Louis XIV, avec la Galerie des Glaces, les jardins extensifs et le Grand Trianon. Site classé au patrimoine mondial de l'UNESCO situé près de Paris.",
-          image: "versailles.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTNqsPjM_CPBsKDioJrAADJi-sWkeCwmlmgLVyjoXxcaMcoh0nOAV5zzlo7&s=10",
           link: "https://www.chateauversailles.fr/"
         },
         {
           id: 8,
           name: "Sainte-Chapelle",
           description: "Chapelle gothique sur l'Île de la Cité, réputée pour ses magnifiques vitraux représentant 1113 scènes bibliques aux couleurs vibrantes.",
-          image: "sainte_chapelle.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTm0KL3R4q8qZYb3MeCKFSUjxqhrH2618jwOnbJVy2BnJpdiJKqw2uW0tSp&s=10",
           link: "https://www.sainte-chapelle.fr/fr/"
         },
         {
           id: 9,
           name: "Jardin du Luxembourg",
           description: "Parc de 24 hectares créé en 1612 avec des promenades ombragées, des courts de tennis, des parterres de fleurs, des voiliers modèles sur le Grand Bassin et le Palais du Luxembourg.",
-          image: "luxembourg.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTeq3e_QgPdeFZd3w-KqdEo0YJ8wpVERnDSUkYSe04xuM1tFNQWZeYvoow&s=10",
           link: "https://www.senat.fr/visite/jardin/index.html"
         },
         {
           id: 10,
           name: "Moulin Rouge",
           description: "Célèbre cabaret mondialement connu comme le berceau du cancan moderne. Établi en 1889 avec son emblématique moulin à vent rouge sur son toit.",
-          image: "moulinrouge.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5jgeoKzUiNfrooK1MO4uC_Gd8aL1zGhzWv2SSsuCpIpdUCZZQUxt1QoU&s=10",
           link: "https://www.moulinrouge.fr/"
         },
         {
           id: 11,
           name: "Cimetière du Père-Lachaise",
           description: "Plus grand cimetière de Paris et l'un des plus visités au monde, avec les tombes de Jim Morrison, Oscar Wilde, Édith Piaf et de nombreuses autres personnalités notables.",
-          image: "perelachaise.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR39d_wrAtU5p2NahrOcTEZLezBj7s3EukepR19eu6cFQWbZwpP61I_sXU&s=10",
           link: "https://www.pere-lachaise.com/"
         },
         {
           id: 12,
           name: "Croisière sur la Seine",
           description: "Découvrez Paris depuis l'eau avec une croisière sur la Seine, passant devant les principaux monuments magnifiquement illuminés la nuit.",
-          image: "seine.jpg",
+          image: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREOB0kVDBUmPIPTqlTvfDaBMJWLe7SjC32iOUX1MjefNcBNE0ii3XinY59&s=10",
           link: "https://www.bateauxparisiens.com/fr.html"
         }
       ]
