--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       background-color: var(--bg-secondary);
       padding: 1.5rem;
       box-shadow: var(--shadow);
-      position: fixed; /* スクロール時に固定 */
+      position: absolute; /* スクロール時に固定 */
       top: 0;
       left: 0;
       width: 100%;
