--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
       max-width: 1200px;
       margin: 2rem auto;
       padding: 0 1.5rem;
+
+/* 案2: メインコンテンツ直下にスペーサー */
+  margin-top: 80px; /* ヘッダー高に合わせて調整 */
+}
+      
     }
 
     .hero {
