--- a/index.html
+++ b/index.html
@@ -114,7 +114,11 @@
 
     .hero {
       text-align: center;
-      margin-bottom: 3rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 400px; /* 適宜調整してください */
     }
 
     .hero h1 {
