--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
 
     .hero h1 {
       font-size: 2.5rem;
+
+  margin: 0 0 10px 0; /* 上、右、下、左 */
+      
       margin-bottom: 1rem;
       background: linear-gradient(45deg, #bb86fc, #03dac6);
       -webkit-background-clip: text;
@@ -132,7 +135,7 @@
     .hero p {
       color: var(--text-secondary);
       max-width: 700px;
-      margin: 0 auto;
+      margin: 0;
     }
 
     .attractions-grid {
